# puremvc-c-standard-framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VERSION
src/core/: controller.c  model.c  view.c
src/interfaces/: controller.h  macro_command.h  mediator.h  model.h  notification.h  observer.h  proxy.h  simple_command.h  view.h
src/patterns/command/: macro_command.c  simple_command.c
src/patterns/mediator/: mediator.c
src/patterns/observer/: notification.c  observer.c
src/patterns/proxy/: proxy.c
test/core/: controller_test.c  controller_test.h  controller_test_command.c  controller_test_command.h  controller_test_command2.c  controller_test_command2.h  controller_test_vo.c  controller_test_vo.h  model_test.c  model_test.h  model_test_proxy.c  model_test_proxy.h  view_test.c  view_test.h  view_test_mediator.c  view_test_mediator.h  view_test_mediator4.c  view_test_mediator4.h
test/patterns/command/: macro_command_test.c  macro_command_test.h  macro_command_test_command.c  macro_command_test_command.h  macro_command_test_sub1_command.c  macro_command_test_sub1_command.h  macro_command_test_sub2_command.c  macro_command_test_sub2_command.h  macro_command_test_vo.c  macro_command_test_vo.h  simple_command_test.c  simple_command_test.h  simple_command_test_command.c  simple_command_test_command.h  simple_command_test_vo.c  simple_command_test_vo.h
test/patterns/mediator/: mediator_test.c  mediator_test.h
test/patterns/observer/: notification_test.c  notification_test.h  observer_test.c  observer_test.h
test/patterns/proxy/: proxy_test.c  proxy_test.h
